--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Prata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Prata&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,7 +10,7 @@ a.active hr {
 }
 
 * {
-    font-family:'Inter 24pt 24pt semibold';
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
     transition: all 0.3s ease;
 }
 
